--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "aws-sdk": "^2.472.0",
     "puppeteer": "^1.17.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^6.1.4"
+  },
   "scripts": {
     "test": "testaroo!!"
   },
