--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "puppeteer": "^1.17.0"
   },
   "devDependencies": {
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "s3rver": "^3.2.0"
   },
   "scripts": {
     "test": "mocha"
