--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "babel src/ -d .",
-    "test": "mocha"
+    "test": "ldd chrome | grep not && mocha"
   },
   "repository": {
     "type": "git",
