Removing some more files that we don't need thanks to the whale

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "s3rver": "^3.2.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "prestart": "npm test"
   },
   "repository": {
     "type": "git",
