--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.472.0",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "jszip": "^3.2.1",
     "puppeteer": "^1.17.0"
   },
   "devDependencies": {
