--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "puppeteer": "^1.17.0"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "mocha": "^6.1.4",
     "s3rver": "^3.2.0"
   },
   "scripts": {
     "postinstall": "cp -rf node_modules/air-datepicker/dist public/dist",
     "test": "mocha",
+    "lint": "eslint *.js",
     "local": "PORT=8080 LOCAL=true npm start",
     "server": "s3rver -a 127.0.0.1 -p 9001 -d /tmp/s3rver --configure-bucket test-bucket.localhost"
   },
