Removing the frontend js from the lint. Should run manually on changes.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "postinstall": "cp -rf node_modules/air-datepicker/dist public/dist",
     "test": "mocha",
-    "lint": "eslint *.js test/*.js public/main.js",
+    "lint": "eslint *.js test/*.js",
     "local": "PORT=8080 LOCAL=true npm start",
     "server": "s3rver -a 127.0.0.1 -p 9001 -d /tmp/s3rver --configure-bucket test-bucket.localhost"
   },
