--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "s3rver": "^3.2.0"
   },
   "scripts": {
-    "prestart": "cp -rf node_modules/air-datepicker/dist public/dist && cp -rf node_modules/jquery/dist/jquery.slim.min.js public/dist/jquery.slim.min.js",
+    "postinstall": "cp -rf node_modules/air-datepicker/dist public/dist && cp -rf node_modules/jquery/dist/jquery.slim.min.js public/dist/jquery.slim.min.js",
     "lint": "eslint *.js test/*.js",
     "pretest": "npm run lint",
     "test": "mocha",
