--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Takes automated snapshots of a website",
   "main": "server.js",
   "dependencies": {
-    "air-datepicker": "^2.2.3",
+    "air-datepicker-en": "^2.2.5",
     "aws-sdk": "^2.472.0",
     "axios": "^0.19.0",
     "express": "^4.17.1",
@@ -21,13 +21,16 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^6.1.4",
-    "s3rver": "^3.2.0"
+    "s3rver": "^3.2.0",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6"
   },
   "scripts": {
     "postinstall": "cp -rf node_modules/air-datepicker/dist public/dist && cp -rf node_modules/jquery/dist/jquery.slim.min.js public/dist/jquery.slim.min.js",
     "lint": "eslint *.js test/*.js",
     "pretest": "npm run lint",
     "test": "mocha",
+    "build": "webpack",
     "local": "PORT=8080 LOCAL=true npm start",
     "server": "s3rver -a 127.0.0.1 -p 9001 -d /tmp/s3rver --configure-bucket test-bucket.localhost"
   },
