--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "puppeteer": "^1.17.0"
   },
   "devDependencies": {
+    "css-loader": "^3.1.0",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -22,6 +23,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^6.1.4",
     "s3rver": "^3.2.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6"
   },
