--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "webpack-cli": "^3.3.6"
   },
   "scripts": {
-    "postinstall": "cp -rf node_modules/air-datepicker/dist public/dist && cp -rf node_modules/jquery/dist/jquery.slim.min.js public/dist/jquery.slim.min.js",
     "lint": "eslint *.js test/*.js",
     "pretest": "npm run lint",
     "test": "mocha",
     "build": "webpack",
+    "prestart": "npm run build",
     "local": "PORT=8080 LOCAL=true npm start",
     "server": "s3rver -a 127.0.0.1 -p 9001 -d /tmp/s3rver --configure-bucket test-bucket.localhost"
   },
