--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^6.1.4",
     "s3rver": "^3.2.0",
+    "sass": "^1.22.7",
     "style-loader": "^0.23.1",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6"
@@ -31,7 +32,7 @@
     "lint": "eslint *.js test/*.js",
     "pretest": "npm run lint",
     "test": "mocha",
-    "build": "webpack",
+    "build": "sass frontend/styles.scss public/style.css --no-source-map && webpack",
     "prestart": "npm run build",
     "local": "PORT=8080 LOCAL=true npm start",
     "server": "s3rver -a 127.0.0.1 -p 9001 -d /tmp/s3rver --configure-bucket test-bucket.localhost"
