--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "air-datepicker-en": "^2.2.5",
     "aws-sdk": "^2.472.0",
     "axios": "^0.19.0",
+    "del": "^5.0.0",
     "express": "^4.17.1",
-    "glob": "^7.1.4",
     "jquery": "^3.4.1",
     "jszip": "^3.2.1",
     "puppeteer": "^1.17.0"
