--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^3.0.2",
     "mocha": "^6.1.4",
     "s3rver": "^3.2.0",
     "sass": "^1.22.7",
@@ -36,6 +37,11 @@
     "prestart": "npm run build",
     "local": "PORT=8080 LOCAL=true npm start",
     "server": "s3rver -a 127.0.0.1 -p 9001 -d /tmp/s3rver --configure-bucket test-bucket.localhost"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   },
   "repository": {
     "type": "git",
